--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E2F0D9">
+    <!--
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -13,7 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_toRightOf="@+id/et"
         android:text="확인"
-        android:onClick="mOnClick"></Button>
+        android:onClick="mOnClick"></Button>-->
 
     <TextView
         android:id="@+id/text1"
@@ -24,7 +25,7 @@
         android:textStyle="bold"
         android:textColor="#000000"
         android:textAlignment="center"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="30dp"/>
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="240dp"
