--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,7 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="colorSplash">#A9D18E</color>
     <color name="ic_launcher_background">#A9D18E</color>
+    <color name="colorBackground">#E2F0D9</color>
+    <color name="colorBasicFont">#000000</color>
+    <color name="colorBackgroundSecond">#A9D18E</color>
 </resources>
