--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,19 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#E2F0D9">
-    <!--
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/et"
-        android:inputType="number"></EditText>
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/et"
-        android:text="확인"
-        android:onClick="mOnClick"></Button>-->
-
     <TextView
         android:id="@+id/text1"
         android:layout_width="match_parent"
@@ -26,20 +13,12 @@
         android:textColor="#000000"
         android:textAlignment="center"
         android:layout_marginTop="30dp"/>
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/text1"
-        android:layout_marginTop="30dp"
-        android:src="@drawable/stat_normal" />
     <TextView
         android:id="@+id/text2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="35dp"
-        android:layout_below="@+id/imageView"
+        android:layout_below="@+id/text1"
         android:layout_centerHorizontal="true"
         android:textSize="25dp"
         android:textStyle="bold"
@@ -54,48 +33,28 @@
         android:textSize="45dp"
         android:textStyle="bold"
         android:textColor="#000000"/>
-    <!--
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_below="@+id/text2"
+        android:orientation="vertical"
+        android:layout_below="@+id/chronometer"
+        android:layout_marginTop="70dp"
         android:layout_centerHorizontal="true"
         android:gravity="center_vertical">
-        <ToggleButton
-            android:id="@+id/toggleButton"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/start"
-            android:textOn=""
-            android:textOff="" />
-        <Chronometer
-            android:id="@+id/chronometer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="45dp"
-            android:textStyle="bold"
-            android:textColor="#000000"/>
-    </LinearLayout>-->
 
-    <ImageButton
-        android:id="@+id/btn1"
+       <ImageButton
+        android:id="@+id/alertBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="35dp"
         android:background="#00000000"
         android:src="@drawable/alert"/>
     <ImageButton
-        android:id="@+id/btn2"
+        android:id="@+id/quizBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginRight="35dp"
+        android:layout_marginTop="50dp"
         android:background="#00000000"
         android:src="@drawable/quiz"/>
+    </LinearLayout>
 </RelativeLayout>
