--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -49,7 +49,9 @@
                 <ImageButton
                     android:id="@+id/addBtn"
                     android:layout_below="@id/listview_quiz"
+                    android:layout_marginTop="15dp"
                     android:layout_width="wrap_content"
+                    android:layout_alignParentRight="true"
                     android:layout_height="wrap_content"
                     android:background="@android:color/transparent"
                     app:srcCompat="@drawable/add" />
